--- a/publications.html
+++ b/publications.html
@@ -498,7 +498,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     <li>More information can be found on <a href="https://web.archive.org/web/20130512113605/http://research.microsoft.com/en-us/projects/dminor/">the Dminor project website, which is also still available via the Wayback Machine</a>.</li> <!-- Was: http://research.microsoft.com/en-us/projects/dminor -->
     <li><a href="publications/dminor-icfp2010.pdf">An abridged version</a> appeared at <a href="http://www.icfpconference.org/icfp2010/">ICFP 2010</a>, September 2010</li>
     <!--<li>Microsoft Research technical report (<a href="http://research.microsoft.com/apps/pubs/default.aspx?id=153977">MSR-TR-2010-99</a>), December 2011.</li>-->
-    <li>The Dminor model and some of the proofs in this paper are <a href="publications/Dminor-model.zip">formalized in Coq</a>, November 2010.</li>
+    <li>The Dminor model and some of the proofs in this paper are <a href="https://web.archive.org/web/20151029235350/http://prosecco.gforge.inria.fr/personal/hritcu/publications/Dminor-model.zip">formalized in Coq</a>, November 2010.</li>
   </ul>
   </li>
 
