--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair since February 2021)</b>
   <ul>
-  <li>Abstract deadline: 16 September 2021</li>
-  <li>Submission deadline: 22 September 2021</li>
+  <!-- <li>Abstract deadline: 16 September 2021</li> -->
+  <!-- <li>Submission deadline: 22 September 2021</li> -->
   <li>Conference: 17-18 January 2022, Philadelphia, Pennsylvania, USA</li>
   <!-- <li>Conference: 17-19 January 2021, Online</li> -->
   </ul>
