--- a/group.html
+++ b/group.html
@@ -100,7 +100,7 @@
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar-Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
   <ul>
