--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ I still closely collaborate with some former members of my group at Inria Paris:
     C&#259;t&#259;lin Hri&#539;cu,
     Kenji Maillard, and
     Bas Spitters.
-    <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
+    <b><a href="https://eprint.iacr.org/eprint-bin/getfile.pl?entry=2021/397&amp;version=20210526:113037&amp;file=397.pdf">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
     In <a href="https://www.ieee-security.org/TC/CSF2021/">34th
     IEEE Computer Security Foundations Symposium (CSF)</a>, pages 608--622. June 2021.
     <b>Distinguished Paper Award</b>.
