--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, MPI-SP)</li>
-<!-- http://perso.ens-lyon.fr/adrien.durier -->
+<!--   <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, MPI-SP)</li> -->
+<!-- <\!-- http://perso.ens-lyon.fr/adrien.durier -\-> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP)</li>
 
