--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.mp4">video</a> (2020-04-03)</li>
+      <li><b>Recent:</b> <a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="https://prosecco.gforge.inria.fr/personal/hritcu/talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
     </ul>
   </li>
 
