--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ could contribute:
 <ul>
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
                                        Formally Secure Compilation</a></b>
-(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2019/secomp-2019.pdf">topics</a>;
+(<a href="https://catalin-hritcu.github.io/students/topics/2019/secomp-2019.pdf">topics</a>;
  <a href="https://github.com/secure-compilation">code</a>;
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
     <!-- <ul> -->
@@ -95,7 +95,7 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: Verification Language for Effectful Programs</a></b>
-(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2019/fstar-topics.pdf">topics</a>;
+(<a href="https://catalin-hritcu.github.io/students/topics/2019/fstar-topics.pdf">topics</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
     <!-- <ul> -->
@@ -104,8 +104,8 @@ could contribute:
     <!--   <\!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris -\-></li> -->
     <!-- </ul> -->
   </li>
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
-  <!-- (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>; -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://catalin-hritcu.github.io/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
+  <!-- (<a href="https://catalin-hritcu.github.io/students/topics/2016/quick-chick.pdf">topics</a>; -->
   <!--  <a href="https://arxiv.org/abs/1409.0393">paper #1</a>, -->
   <!--  <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>, -->
   <!--  <a href="https://arxiv.org/abs/1607.05443">paper #3</a>, -->
@@ -219,7 +219,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
     <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense on Tuesday, 29 January 2019 at Inria Paris</a>
-     (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">Thesis</a>)
+     (<a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">Thesis</a>)
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
@@ -240,7 +240,7 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a> -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://catalin-hritcu.github.io/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a> -->
   <!-- <\!-- <ul> -\-> -->
   <!-- <\!-- <li>Application deadline: 4 July, 2018</li> -\-> -->
   <!-- <\!-- <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li> -\-> -->
@@ -265,7 +265,7 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</b> -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://catalin-hritcu.github.io/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</b> -->
   <!-- <\!-- <ul> -\-> -->
   <!-- <\!-- <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li> -\-> -->
   <!-- <\!-- </ul> -\-> -->
@@ -374,13 +374,13 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <!-- <li style="margin-bottom: 1ex;">Teaching <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a> at<br/><a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017 -->
+  <!-- <li style="margin-bottom: 1ex;">Teaching <a href="https://catalin-hritcu.github.io/teaching/mpri-jan2017/">Program Verification with F*</a> at<br/><a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017 -->
   <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;">Visiting researcher at <a href="http://research.microsoft.com/en-us/groups/rise/">Microsoft Research Redmond</a>, October - November 2016 -->
   <!-- </li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016 -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://catalin-hritcu.github.io/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016 -->
   <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li> -->
@@ -393,7 +393,7 @@ could contribute:
   <!-- </li> -->
   <!-- <li style="margin-bottom: 1ex;"><a href="http://2015.ecoop.org/event/plas-2015-papers-micro-policies-formally-verified-tag-based-security-monitors">Invited talk on Micro-Policies</a> at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>, 6 July 2015 -->
   <!-- </li> -->
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Lecture</a>, Saarland University, 16-27 March 2015 -->
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Lecture</a>, Saarland University, 16-27 March 2015 -->
   <!-- </li> -->
 <!--
   <li style="margin-bottom: 1ex;">
@@ -754,7 +754,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <!--    C&#259;t&#259;lin Hri&#539;cu, -->
   <!--    Chantal Keller, -->
   <!--    and Nikhil Swamy. -->
-  <!-- <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>. -->
+  <!-- <b><a href="https://catalin-hritcu.github.io/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>. -->
   <!-- Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016. -->
   <!-- </li> -->
 
@@ -934,24 +934,24 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at<br/> <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/epit2018/">Program Verification with F*</a></b> course at<br/> <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at<br/> <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at<br/> <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, <!-- 10-13 --> July 2017
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, <!-- 10-13 --> July 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, Romania, September 2016
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, Romania, September 2016
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, <!-- 16-27 --> March 2015
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, <!-- 16-27 --> March 2015
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/tutorial/">F* tutorial</a></b>
