--- a/publications.html
+++ b/publications.html
@@ -298,7 +298,7 @@
 
   <li style="margin-bottom: 1ex;">
     <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
-    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#539;cu</a>,
+    <a href="https://catalin-hritcu.github.io/">C&#259;t&#259;lin Hri&#539;cu</a>,
     <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
     <a href="https://www.cs.umd.edu/~aseem/">Aseem Rastogi</a>,
     <a href="http://antoine.delignat-lavaud.fr/">Antoine Delignat-Lavaud</a>,
@@ -332,7 +332,7 @@
     C&#259;t&#259;lin Hri&#539;cu,
     Benjamin C. Pierce,
     Antal Spector-Zabusky,
-    Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. In <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, pages 813-830. IEEE Computer Society, May 2015.
+    Andrew Tolmach. <b><a href="https://catalin-hritcu.github.io/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. In <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, pages 813-830. IEEE Computer Society, May 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
   </ul>
@@ -390,7 +390,7 @@
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu, Michael Greenberg, Ben Karel, Benjamin C. Pierce, Greg Morrisett. <b><a href="publications/all-your-ifcexception-oakland2013-full.pdf">All Your IFCException Are Belong To Us</a></b>. In <a href="http://www.ieee-security.org/TC/SP2013/">34th IEEE Symposium on Security and Privacy (Oakland)</a>, pages 3-17, IEEE Computer Society Press, May 2013.
   <ul style="font-size: small">
     <li>Coq formalization and proofs are available <a href="publications/all-your-ifcexception-coq-proofs.zip">here</a>.</li>
-    <li>Breeze interpreter, libraries, and sample applications are available <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/breeze-interpreter-snapshot-2015-06-27.zip">here</a>.</li>
+    <li>Breeze interpreter, libraries, and sample applications are available <a href="https://catalin-hritcu.github.io/temp/breeze-interpreter-snapshot-2015-06-27.zip">here</a>.</li>
     <li>A previous version of this work was called <a href="http://www.cis.upenn.edu/~mgree/papers/popl2013_exceptional.pdf">Exceptionally Available Dynamic IFC</a>, July 2012.</li>
   </ul>
   </li>
@@ -498,7 +498,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     <li>More information can be found on <a href="https://web.archive.org/web/20130512113605/http://research.microsoft.com/en-us/projects/dminor/">the Dminor project website, which is also still available via the Wayback Machine</a>.</li> <!-- Was: http://research.microsoft.com/en-us/projects/dminor -->
     <li><a href="publications/dminor-icfp2010.pdf">An abridged version</a> appeared at <a href="http://www.icfpconference.org/icfp2010/">ICFP 2010</a>, September 2010</li>
     <!--<li>Microsoft Research technical report (<a href="http://research.microsoft.com/apps/pubs/default.aspx?id=153977">MSR-TR-2010-99</a>), December 2011.</li>-->
-    <li>The Dminor model and some of the proofs in this paper are <a href="https://web.archive.org/web/20151029235350/http://prosecco.gforge.inria.fr/personal/hritcu/publications/Dminor-model.zip">formalized in Coq</a>, November 2010.</li>
+    <li>The Dminor model and some of the proofs in this paper are <a href="https://web.archive.org/web/20151029235350/https://catalin-hritcu.github.io/publications/Dminor-model.zip">formalized in Coq</a>, November 2010.</li>
   </ul>
   </li>
 
@@ -570,7 +570,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <h3>Theses</h3>
 <ol start="42" style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
   <ul style="font-size: small">
     <li>Main Coq formalizations available
         <a href="https://github.com/secure-compilation/exploring-robust-property-preservation">here</a> and
@@ -664,7 +664,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
      C&#259;t&#259;lin Hri&#539;cu,
      Chantal Keller,
      and Nikhil Swamy.
-  <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
+  <b><a href="https://catalin-hritcu.github.io/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
   Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
   </li>
 
