--- a/software.html
+++ b/software.html
@@ -56,7 +56,7 @@
       system, and programming language (~40 people team)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://web.archive.org/web/20150914220632/http://prosecco.gforge.inria.fr/personal/hritcu/temp/breeze-interpreter-snapshot-2015-06-27.zip">Breeze: 
+    <a href="https://web.archive.org/web/20150914220632/https://catalin-hritcu.github.io/temp/breeze-interpreter-snapshot-2015-06-27.zip">Breeze: 
   a programming language with dynamic information flow control 
   and label-based access control</a> (with
   Michael Greenberg, Ben Karel,  Benoît Montagu,
