--- a/talks.html
+++ b/talks.html
@@ -123,7 +123,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li style="margin-bottom: 1ex"><em><a href="https://popl17.sigplan.org/event/scm-2017-what-is-secure-compilation-part-ii">What is secure compilation?</a></em>
     <ul style="font-size: small">
       <li>Short talk at <a href="https://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting (SCM)</a>:
-          <a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">slides</a> (2017-01-15)
+          <a href="https://catalin-hritcu.github.io/talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">slides</a> (2017-01-15)
       </li>
     </ul>
   </li>
