--- a/authorizer.html
+++ b/authorizer.html
@@ -9,7 +9,7 @@
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Catalin Hritcu - Inria Paris-Rocquencourt</title>
+	<title>Catalin Hritcu - MPI-SP</title>
 </head>
 
 <body>
