--- a/group.html
+++ b/group.html
@@ -52,7 +52,7 @@
   <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a>
   <ul>
     <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2019-03:<br/>
-      <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
+      <a href="https://catalin-hritcu.github.io/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
   </ul>
   </li>
 
@@ -140,7 +140,7 @@
     <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at University of Pennsylvania; 2011-08 to 2017-10,<br/> Co-Supervised with Benjamin C. Pierce:
       <a href="http://www.seas.upenn.edu/~aarthur/thesis.pdf">A Methodology for Micro-Policies</a></li>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
-      <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
+      <a href="https://catalin-hritcu.github.io/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc at <a href="https://www.cylab.cmu.edu/">Carnegie Mellon University</a>]</div></li>
@@ -203,7 +203,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://www.lri.fr/membre.php?mb=2372">Diane Gallois-Wong</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/diane/report.pdf">Formalising Luck: Improved Probabilistic Semantics for Property-Based Generators</a></li>
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="https://catalin-hritcu.github.io/students/diane/report.pdf">Formalising Luck: Improved Probabilistic Semantics for Property-Based Generators</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>] [Now PhD student at <a href="https://www.lri.fr/">LRI, Université Paris-Sud</a>]</div></li>
 
