--- a/teaching.html
+++ b/teaching.html
@@ -22,26 +22,26 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
+  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://catalin-hritcu.github.io/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
 
-  <li style="margin-bottom: 1ex;"><b>Recent: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
+  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://catalin-hritcu.github.io/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at<br/> <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/epit2018/">Program Verification with F*</a></b> course at<br/> <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at<br/> <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at<br/> <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, <!-- 10-13 --> July 2017
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, <!-- 10-13 --> July 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/tutorial/">F* tutorial</a></b>
