--- a/index.html
+++ b/index.html
@@ -790,6 +790,13 @@ I am very fortunate to work with a group of outstanding students and starting re
     </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP 2021</em></a>
+
+    <ul style="font-size: small">
+      <li>Chairs' Report: <a href="https://popl21.sigplan.org/details/CPP-2021/27/Chairs-report-and-community-meeting">slides and video</a> (2021-01-19)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
 
     <ul style="font-size: small">
@@ -809,7 +816,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP 2020</em></a>
 
     <ul style="font-size: small">
-      <li>Program Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
+      <li>Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
     </ul>
   </li>
 
@@ -848,7 +855,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   <li style="margin-bottom: 1ex;"><em>The Quest for Formally Secure Compartmentalizing Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
+      <li><a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
     </ul>
 
     <ul style="font-size: small">
