--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar <strike>20201</strike> 21481 on Secure Compilation</a></strike></b> (Co-Organizer)
-  <ul>
-  <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li>
-  </ul>
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></strike></b> (Co-Organizer)
+  <!-- <ul> -->
+  <!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a></b>
