--- a/publications.html
+++ b/publications.html
@@ -75,6 +75,7 @@
     <b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
+      <li>Superseded by journal paper entitled An Extended Account of Trace-relating Compiler Correctness and Secure Compilation, see <a href="#journal">below</a>.</li>
     </ul>
   </li>
 
@@ -364,7 +365,7 @@
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
-    Andrew Tolmach. <b><a href="http://www.crash-safe.org/node/29">A Verified Information-Flow Architecture</a></b>. In <a href="http://popl.mpi-sws.org/2014/">41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL)</a>, pages 165-178. ACM, January 2014.
+    Andrew Tolmach. <b><a href="https://web.archive.org/web/20180628022156/http://www.crash-safe.org/node/29/">A Verified Information-Flow Architecture</a></b>. In <a href="http://popl.mpi-sws.org/2014/">41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL)</a>, pages 165-178. ACM, January 2014.
   <ul style="font-size: small">
     <li>Superseded by journal paper with the same name, see <a href="#journal">below</a>.</li>
   </ul>
@@ -450,6 +451,23 @@
 <h3>Journal Papers</h3>
 
 <ol id="journal" start="31" style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">
+    Carmine Abate,
+    Roberto Blanco,
+    Ștefan Ciobâcă,
+    Adrien Durier,
+    Deepak Garg,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Marco Patrignani,
+    Éric Tanter, and
+    Jérémy Thibault.
+    <b><a href="https://doi.org/10.1145/3460860">An Extended Account of Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
+    ACM Transactions on Programming Languages and Systems (TOPLAS). Volume 43, Issue 4, pages 1-48. ACM, December 2021.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
+    </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu,
     Leonidas Lampropoulos,
