--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
     <b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
-      <li>Superseded by journal paper entitled An Extended Account of Trace-relating Compiler Correctness and Secure Compilation, see <a href="#journal">below</a>.</li>
+      <li>Superseded by journal paper entitled "An Extended Account of Trace-relating Compiler Correctness and Secure Compilation", see <a href="#journal">below</a>.</li>
     </ul>
   </li>
 
@@ -528,13 +528,13 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="36" style="width:42em; text-align: left">
+<ol start="37" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="38" style="width:42em; text-align: left">
+<ol start="39" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#539;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
@@ -543,7 +543,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Editor</h3>
-<ol start="39" style="width:42em; text-align: left">
+<ol start="40" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   C&#259;t&#259;lin Hri&#539;cu and Andrei Popescu,
   editors. <b><a href="https://doi.org/10.1145/3437992">Proceedings of the 10th
@@ -586,7 +586,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="42" style="width:42em; text-align: left">
+<ol start="43" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
   <ul style="font-size: small">
@@ -635,7 +635,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="45" style="width:42em; text-align: left">
+<ol start="46" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#539;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -645,7 +645,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 
 <h3>Recent Drafts</h3>
-<ol start="46" style="width:42em; text-align: left">
+<ol start="47" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Akram El-Korashy,
@@ -664,7 +664,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Informal Publications and Workshops</h3>
-<ol start="47" style="width:42em; text-align: left">
+<ol start="48" style="width:42em; text-align: left">
 
 
   <!-- <li style="margin-bottom: 1ex;"> -->
