--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair since February 2021)</b>
-  <ul>
+  <!-- <ul> -->
   <!-- <li>Abstract deadline: 16 September 2021</li> -->
   <!-- <li>Submission deadline: 22 September 2021</li> -->
-  <li>Conference: 17-18 January 2022, Philadelphia, Pennsylvania, USA</li>
+  <!-- <li>Conference: 17-18 January 2022, Philadelphia, Pennsylvania, USA</li> -->
   <!-- <li>Conference: 17-19 January 2021, Online</li> -->
-  </ul>
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></strike></b> (Co-Organizer)
