--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
+<p style="width:42em; text-align: left">(he/him)</p>
+
 <p style="width:42em; text-align: left">
 <b>Tenured faculty and head of the <a href="#group">Formally Verified Security group</a></b><br/> at the
 <a href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in
