--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar-Constantin Andrici</a> (PhD Student, MPI-SP)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://cezarandrici.com">Cezar-Constantin Andrici</a> (PhD Student, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
 
