--- a/index.html
+++ b/index.html
@@ -559,7 +559,9 @@ I am very fortunate to work with a group of outstanding students and starting re
     Deepak Garg, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="https://arxiv.org/abs/2110.01439">SecurePtrs: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation</a></b>.
-    arXiv:2110.01439. October 2021.
+    To appear in <a href="https://www.ieee-security.org/TC/CSF2022/">35th
+    IEEE Computer Security Foundations Symposium (CSF)</a>.
+    August 2022.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/when-good-components-go-bad/tree/memory-sharing">Coq development</a></li>
     </ul>
