--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,22 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Akram El-Korashy,
+    Roberto Blanco,
+    Jérémy Thibault,
+    Adrien Durier,
+    Deepak Garg, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://arxiv.org/abs/2110.01439">SecurePtrs: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation</a></b>.
+    To appear in <a href="https://www.ieee-security.org/TC/CSF2022/">35th
+    IEEE Computer Security Foundations Symposium (CSF)</a>.
+    August 2022.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad/tree/memory-sharing">Coq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Carmine Abate, 
     Philipp G. Haselwarter, 
     Exequiel Rivas, 
@@ -450,7 +466,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol id="journal" start="31" style="width:42em; text-align: left">
+<ol id="journal" start="32" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Carmine Abate,
@@ -528,13 +544,13 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="37" style="width:42em; text-align: left">
+<ol start="38" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="39" style="width:42em; text-align: left">
+<ol start="40" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#539;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
@@ -543,7 +559,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Editor</h3>
-<ol start="40" style="width:42em; text-align: left">
+<ol start="41" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   C&#259;t&#259;lin Hri&#539;cu and Andrei Popescu,
   editors. <b><a href="https://doi.org/10.1145/3437992">Proceedings of the 10th
@@ -586,7 +602,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="43" style="width:42em; text-align: left">
+<ol start="44" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, January 2019.
   <ul style="font-size: small">
@@ -635,7 +651,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="46" style="width:42em; text-align: left">
+<ol start="47" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#539;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -644,24 +660,10 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 
-<h3>Recent Drafts</h3>
-<ol start="47" style="width:42em; text-align: left">
+<!-- <h3>Recent Drafts</h3> -->
+<!-- <ol start="47" style="width:42em; text-align: left"> -->
 
-  <li style="margin-bottom: 1ex;">
-    Akram El-Korashy,
-    Roberto Blanco,
-    Jérémy Thibault,
-    Adrien Durier,
-    Deepak Garg, and
-    C&#259;t&#259;lin Hri&#539;cu.
-    <b><a href="https://arxiv.org/abs/2110.01439">SecurePtrs: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation</a></b>.
-    arXiv:2110.01439. October 2021.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad/tree/memory-sharing">Coq development</a></li>
-    </ul>
-  </li>
-
-</ol>
+<!-- </ol> -->
 
 <h3>Informal Publications and Workshops</h3>
 <ol start="48" style="width:42em; text-align: left">
