--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ could contribute:
 <p><i>E-mail:</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
 <p><i>Address:</i>
   <a href="https://www.google.com/maps/place/Universit%C3%A4tsstra%C3%9Fe+142,+44801+Bochum,+Germany/@51.4451438,7.2558755,18z/">Universitätsstraße 142, 44799 Bochum, Germany</a></p>
-<p>RUB Campus, <i>Building</i> TRZ/MB, <i>Office</i> S-W 106</p>
+<p>On the RUB Campus, Building: Technologiezentrum Ruhr (TRZ, aka MB), Office: S-W 106</p>
 
 <!--
   <ul>
