--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <a href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in
 <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.<br/>
 I am also co-opted by the <a href="https://informatik.rub.de/en/">Faculty of Computer Science</a>
-at <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>,
+at <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>,<br/>
 and an associated PI of the <a href="https://casa.rub.de/en/">CASA Excellence Center</a>.
 </p>
 
