--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ could contribute:
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></strike></b> (Co-Organizer)
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>, December 2021</strike></b> (Co-Organizer)
   <!-- <ul> --> 
   <!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -->
   <!-- </ul> -->
