--- a/index.html
+++ b/index.html
@@ -530,6 +530,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://cs.au.dk/~ageorges/">Aïna Linn Georges</a> (Intern, Aarhus University)</li>
+
 </ul>
 
 <!-- I still closely collaborate with some former members of my group at Inria Paris: -->
