--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair since February 2021)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since February 2021)
   <!-- <ul> -->
   <!-- <li>Abstract deadline: 16 September 2021</li> -->
   <!-- <li>Submission deadline: 22 September 2021</li> -->
